fixes page jumping when rerror shown

--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,8 @@ input[type='number'] {
 }
 
 .Alert {
-	position: fixed;
+	position: center;
+	min-height: 60px;
 	top: 20px;
 }
 
